* Modularizing code so that differernt implementations may occur   simultaneously. * Created generic PlyMutateState() as backend for DoPly() and UndoPly(). * Eliminated brute-force names. These may be added to a new cpp file that does   brute force if so desired.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ project(no_tipping_game)
 file(GLOB HEADERS "*.h")
 
 set(SRCS
-    "brute_force_ntg.cpp")
+    "main.cpp")
 
-add_executable(brute_force_ntg ${SRCS} ${HEADERS})
-
+add_executable(ntg ${SRCS} ${HEADERS})
