* Adding projects for libntg and libntgjni.   libntg - Shared code for all projects in no tipping game.   libntgjni - Library used to link Java to CPP application. * Impl a board evaluation function. TODO: * Test board evaluation function. * Impl MiniMax.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
-
-project(no_tipping_game)
-
 file(GLOB HEADERS "*.h")
 
+project(libntg)
 set(SRCS
-    "main.cpp")
+    "combination.cpp")
+add_library(libntg STATIC ${SRCS} ${HEADERS})
 
+project(ntg)
+set(SRCS
+    "ntg.cpp")
 add_executable(ntg ${SRCS} ${HEADERS})
+target_link_libraries(ntg libntg)
+
+project(ntg_jni)
+find_package(JNI REQUIRED)
+set(SRCS
+    "combination.cpp"
+    "libntgjni.cpp")
+include_directories(${JNI_INCLUDE_DIRS})
+add_library(libntgjni SHARED ${SRCS} ${HEADERS})
+target_link_libraries(libntgjni libntg ${JNI_LIBRARIES})
+
+project(ntg)
