--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SRCS
 add_executable(ntg ${SRCS} ${HEADERS})
 target_link_libraries(ntg libntg)
 
-project(ntg_jni)
+project(libntgjni)
 find_package(JNI REQUIRED)
 set(SRCS
     "combination.cpp"
@@ -20,5 +20,14 @@ set(SRCS
 include_directories(${JNI_INCLUDE_DIRS})
 add_library(libntgjni SHARED ${SRCS} ${HEADERS})
 target_link_libraries(libntgjni libntg ${JNI_LIBRARIES})
+
+if(HPS_GTEST_ENABLED)
+  project(ntg_gtest)
+  set(SRCS
+      "ntg_gtest.cpp")
+  include_directories(${GTEST_INCLUDE_DIRS})
+  add_executable(ntg_gtest ${SRCS} ${HEADERS})
+  target_link_libraries(ntg_gtest libntg gtest)
+endif(HPS_GTEST_ENABLED)
 
 project(ntg)
