Debugging prints for JNI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,16 @@ set(SRCS
 add_executable(ntg ${SRCS} ${HEADERS})
 target_link_libraries(ntg libntg)
 
-project(libntgjni)
+project(ntgjni)
 find_package(JNI REQUIRED)
 set(SRCS
     "libntgjni.cpp")
 include_directories(${JNI_INCLUDE_DIRS})
-add_library(libntgjni SHARED ${SRCS} ${HEADERS})
-target_link_libraries(libntgjni libntg ${JNI_LIBRARIES})
-SET_TARGET_PROPERTIES(libntgjni PROPERTIES COMPILE_FLAGS -fPIC)
+add_library(ntgjni SHARED ${SRCS} ${HEADERS})
+target_link_libraries(ntgjni libntg ${JNI_LIBRARIES})
+SET_TARGET_PROPERTIES(ntgjni PROPERTIES COMPILE_FLAGS -fPIC)
+SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC")
+SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fPIC")
 
 if(HPS_GTEST_ENABLED)
   project(ntg_gtest)
