--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 file(GLOB HEADERS "*.h")
 
-project(libntg)
-set(SRCS
-    "combination.cpp")
-add_library(libntg STATIC ${SRCS} ${HEADERS})
-
 project(ntg)
 set(SRCS
-    "ntg.cpp")
-add_executable(ntg ${SRCS} ${HEADERS})
-target_link_libraries(ntg libntg)
+    "combination.cpp")
+add_library(ntg STATIC ${SRCS} ${HEADERS})
 
-project(libntgjni)
+project(no_tipping_game)
+set(SRCS
+    "ntg.cpp")
+add_executable(no_tipping_game ${SRCS} ${HEADERS})
+target_link_libraries(no_tipping_game ntg)
+
+project(ntgjni)
 find_package(JNI REQUIRED)
 set(SRCS
-    "libntgjni.cpp")
+    "ntgjni.cpp")
 include_directories(${JNI_INCLUDE_DIRS})
-add_library(libntgjni SHARED ${SRCS} ${HEADERS})
-target_link_libraries(libntgjni libntg ${JNI_LIBRARIES})
+add_library(ntgjni SHARED ${SRCS} ${HEADERS})
+target_link_libraries(ntgjni ntg ${JNI_LIBRARIES})
 
 if(HPS_GTEST_ENABLED)
   project(ntg_gtest)
@@ -26,7 +26,10 @@ if(HPS_GTEST_ENABLED)
       "ntg_gtest.cpp")
   include_directories(${GTEST_INCLUDE_DIRS})
   add_executable(ntg_gtest ${SRCS} ${HEADERS})
-  target_link_libraries(ntg_gtest libntg gtest)
+  target_link_libraries(ntg_gtest ntg gtest)
 endif(HPS_GTEST_ENABLED)
+
+file(GLOB JAVA_SRCS "*.java")
+file(COPY ${JAVA_SRCS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 project(ntg)
