* Impl parallel Minimax keeps 6 cores cooking on Energon. * Impl MonteCarlo player. He might be better than random. * OpenMP flags for UNIX set properly. * Can win 10/10 games as blue. TODO: * Need to tune parameters depending on player since depths are different. * Better scoring function? Note: There is a little bit of logic at then end of Minimax::Run() that extends   the depth of the search once the removal phase begins. This should move   external to the Minimax function and instead be handled by the control logic   that plays the game. The GTest is a template so it does not do well with   special logic like this. We would have to add a template to do such things.   Would proceed by working on no_tipping_game target and getting parameters   right there.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,26 @@
 cmake_minimum_required(VERSION 2.8)
 file(GLOB HEADERS "*.h")
 
+find_package(OpenMP REQUIRED)
+
 project(ntg)
 set(SRCS
     "combination.cpp")
 add_library(ntg STATIC ${SRCS} ${HEADERS})
+
+if(UNIX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif(UNIX)
 
 project(no_tipping_game)
 set(SRCS
     "ntg.cpp")
 add_executable(no_tipping_game ${SRCS} ${HEADERS})
 target_link_libraries(no_tipping_game ntg)
+if(WIN32)
+  set_target_properties(no_tipping_game PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+endif(WIN32)
 
 project(ntgjni)
 find_package(JNI REQUIRED)
@@ -19,6 +29,9 @@ set(SRCS
 include_directories(${JNI_INCLUDE_DIRS})
 add_library(ntgjni SHARED ${SRCS} ${HEADERS})
 target_link_libraries(ntgjni ntg ${JNI_LIBRARIES})
+if(WIN32)
+  set_target_properties(ntgjni PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+endif(WIN32)
 
 if(HPS_GTEST_ENABLED)
   project(ntg_gtest)
@@ -27,6 +40,9 @@ if(HPS_GTEST_ENABLED)
   include_directories(${GTEST_INCLUDE_DIRS})
   add_executable(ntg_gtest ${SRCS} ${HEADERS})
   target_link_libraries(ntg_gtest ntg gtest)
+  if(WIN32)
+    set_target_properties(ntg_gtest PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+  endif(WIN32)
 endif(HPS_GTEST_ENABLED)
 
 file(GLOB JAVA_SRCS "*.java")
