--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,16 @@
 cmake_minimum_required(VERSION 2.8)
+
 file(GLOB HEADERS "*.h")
+
+# Enable OpenMP in UNIX.
+# Enable multicore builds in MSVC.
+find_package(OpenMP REQUIRED)
+if(UNIX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+else(UNIX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+endif(UNIX)
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   message("Setting CMAKE_INSTALL_PREFIX to ${CMAKE_BINARY_DIR}.")
@@ -8,35 +19,33 @@ else(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   message("CMAKE_INSTALL_PREFIX was set to ${CMAKE_INSTALL_PREFIX}.")
 endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
-find_package(OpenMP REQUIRED)
-
 project(ntg)
 set(SRCS
-    "combination.cpp")
+    "combination.cpp"
+    "adversarial_utils.cpp"
+    "ntg.cpp")
 add_library(ntg STATIC ${SRCS} ${HEADERS})
 
-if(UNIX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-endif(UNIX)
-
-project(no_tipping_game)
+project(ntg_contestant_util)
 set(SRCS
-    "ntg.cpp")
-add_executable(no_tipping_game ${SRCS} ${HEADERS})
-target_link_libraries(no_tipping_game ntg)
+    "contestant_util.cpp")
+add_library(contestant_util STATIC ${SRCS} ${HEADERS})
+target_link_libraries(contestant_util ntg)
+
+project(ntg_contestant)
+set(SRCS
+    "contestant.cpp")
+add_executable(contestant ${SRCS} ${HEADERS})
+target_link_libraries(contestant contestant_util)
+install(TARGETS contestant RUNTIME DESTINATION bin/no_tipping)
 if(WIN32)
-  set_target_properties(no_tipping_game PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
-endif(WIN32)
-install(TARGETS no_tipping_game RUNTIME DESTINATION bin)
-if(WIN32)
-  add_custom_command(TARGET no_tipping_game
+  add_custom_command(TARGET contestant
                      POST_BUILD
                      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                      COMMAND del /F /Q *.class
                      COMMAND javac *.java)
 else(WIN32)
-  add_custom_command(TARGET no_tipping_game
+  add_custom_command(TARGET contestant
                      POST_BUILD
                      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                      COMMAND rm -f *.class
@@ -44,19 +53,8 @@ else(WIN32)
 endif(WIN32)
 install(
   CODE "file(GLOB JAVA_CLASSES \"${CMAKE_CURRENT_BINARY_DIR}/*.class\")"
-  CODE "file(INSTALL \${JAVA_CLASSES} DESTINATION \"${CMAKE_INSTALL_PREFIX}/bin\")"
+  CODE "file(INSTALL \${JAVA_CLASSES} DESTINATION \"${CMAKE_INSTALL_PREFIX}/bin/no_tipping\")"
   )
-
-project(ntgjni)
-find_package(JNI REQUIRED)
-set(SRCS
-    "libntgjni.cpp")
-include_directories(${JNI_INCLUDE_DIRS})
-add_library(ntgjni SHARED ${SRCS} ${HEADERS})
-target_link_libraries(ntgjni ntg ${JNI_LIBRARIES})
-if(WIN32)
-  set_target_properties(ntgjni PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
-endif(WIN32)
 
 if(HPS_GTEST_ENABLED)
   project(ntg_gtest)
@@ -65,10 +63,15 @@ if(HPS_GTEST_ENABLED)
   include_directories(${GTEST_INCLUDE_DIRS})
   add_executable(ntg_gtest ${SRCS} ${HEADERS})
   target_link_libraries(ntg_gtest ntg gtest)
-  if(WIN32)
-    set_target_properties(ntg_gtest PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
-  endif(WIN32)
-  add_test(Ntg_GTest ntg_gtest)
+  add_test(ntg_gtest ntg_gtest)
+
+  project(ntg_contestant_gtest)
+  set(SRCS
+      "contestant_gtest.cpp")
+  include_directories(${GTEST_INCLUDE_DIRS})
+  add_executable(contestant_gtest ${SRCS} ${HEADERS})
+  target_link_libraries(contestant_gtest contestant_util gtest)
+  add_test(contestant_gtest contestant_gtest)
 endif(HPS_GTEST_ENABLED)
 
 file(GLOB JAVA_SRCS "*.java")
